Add products entity
