# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\CategoriesController;
 use App\Http\Controllers\api\SenderController;
 use Illuminate\Http\Request;
@@ -15,4 +16,11 @@ Route::post('/categories/store', [CategoriesController::class, 'store']);
 Route::post('/categories/update/{id}', [CategoriesController::class, 'update']);
 Route::delete('/categories/{id}', [CategoriesController::class, 'destroy']);
 
+Route::get('/products', [CategoriesController::class, 'index']);
+Route::get('/products/{id}', [CategoriesController::class, 'show']);
+Route::post('/products/store', [CategoriesController::class, 'store']);
+Route::post('/products/update/{id}', [CategoriesController::class, 'update']);
+Route::delete('/products/{id}', [CategoriesController::class, 'destroy']);
+
 Route::post('/send/email', [SenderController::class, 'send_email']);
+Route::post('/login', [AuthController::class, 'login']);
